--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "vue-eslint-parser": "^9.3.1"
   },
   "dependencies": {
-    "@nuxt/image": "^1.0.0",
+    "@nuxt/image": "^1.0.0-rc.2",
     "@pinia/nuxt": "^0.4.11",
     "@tabler/icons-vue": "^2.38.0",
     "pinia": "^2.1.6",
